admin button z-index fixed

--- a/frontend/src/components/Headbar/Headbar.css
+++ b/frontend/src/components/Headbar/Headbar.css
@@ -41,6 +41,7 @@ a:hover {
 }
 
 .admin-button {
+  z-index: 10;
   background-color: var(--color-primary);
   color: var(--color-bar);
   border: none;
